components/layout/Navigation.module.scss
@use '../../styles/variables.module';
@use '../../styles/mixins.module';

$pillSize: 2rem;

@mixin pill {
  content: '';
  position: absolute;
  width: 100%;
  height: 12%;
  background: white;
  border-radius: $pillSize;
  transition: all .5s cubic-bezier(.1, .9, 0, 1.2);
}

@mixin hamburger {
  position: relative;
  width: $pillSize;
  height: $pillSize;
  cursor: pointer;

  .bun {
    &:before {
      @include pill;
      top: 10%;
      right: 0;
    }

    &:after {
      @include pill;
      bottom: 10%;
      left: 0;
    }

    .meat {
      display: flex;
      align-items: center;
      height: $pillSize;
      width: $pillSize;

      &:before, &:after {
        @include pill;
      }
    }
  }
}

@mixin background {
  border-bottom: 1px solid fade-out(white, .8);
  background: rgba(0, 0, 0, .78);
  backdrop-filter: blur(17px);
  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 5px 8px 0 rgba(0, 0, 0, 0.14), 0 1px 14px 0 rgba(0, 0, 0, 0.12)
}

.navigation {
  position: sticky;
  top: 0;
  width: 100%;
  border-radius: 0 0 4px 4px;
  z-index: 2;

  @include background;

  .container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    height: 100%;

    .navigationControl {
      display: flex;
      justify-content: space-between;
      align-items: center;
      height: 5rem;
      width: 100%;

      a {
        height: 100%;

        .logo {
          height: 100%;
          width: auto;
          padding: .8rem 0;
          transition: all .2s cubic-bezier(.1, .9, 0, 1.2);

          &:hover {
            transform: scale(1.05);
          }
        }

        &:hover {
          text-decoration: none;
        }
      }

      .hamburger {
        @include hamburger;
      }

      .menuNotHidden {
        .bun {
          &:before, &:after {
            width: 0;
          }

          .meat {
            &:before {
              transform: rotate(135deg);
            }

            &:after {
              transform: rotate(45deg);
            }
          }
        }
      }
    }

    .navigationItems {
      align-self: flex-end;
      display: flex;
      flex-direction: column;
      gap: .5rem;
      padding-bottom: 1rem;

      &.inactive {
        display: none;
      }

      ul {
        display: flex;
        height: 100%;
        align-items: flex-end;
        margin: 0;
        padding: 0;
        list-style-type: none;
        gap: .5rem;

        .link {
          color: white;
          font-weight: 600;
          font-size: .9rem;
          text-transform: uppercase;
          white-space: nowrap;
          padding: .27rem;
          transition: color .1s ease-in-out;

          &:hover {
            text-decoration: none;
            color: darken(white, 27%);
          }
        }
      }

      .socials {
        justify-content: end;

        .link {
          display: block;
          margin: auto;
        }
      }

      .anchors {
        flex-direction: column;
      }
    }
  }
}


.navigationSubpage {
  @include background;
}

.navigationRoot {
  position: fixed;
  transition: all .3s ease-in-out;

  &.notScrolled {
    height: 9rem;
    background: unset;
    backdrop-filter: unset;
    border-bottom: unset;
    box-shadow: unset;
  }
}

@media (width >= map-get(variables.$breakpoints, 'md')) {
  .navigation {

    .container {
      flex-direction: column;
      align-items: center;

      .navigationItems {
        flex-direction: row;
        align-items: center;

        .anchors {
          flex-direction: row;
          align-items: center;
        }
      }
    }
  }
}

@media (width >= map-get(variables.$breakpoints, 'lg')) {
  .navigation {
    height: 4.2rem;
    display: flex;
    align-items: center;

    .container {
      flex-direction: row;
      height: 4rem;

      .navigationControl {
        height: 100%;

        a {
          .logo {
            padding: .4rem 0;
          }
        }

        .hamburger {
          display: none;
        }
      }

      .navigationItems {
        align-self: center;
        padding-bottom: revert;
      }
    }
  }
}

